point pojo submodule to cdot repo with fix